--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "4000:4000"
+      - "4000:4000" # Adjust this port if necessary
+    volumes:
+      - ./backend:/app
     environment:
+      - FLASK_ENV=development
       - PORT=4000
       - NODE_ENV=development
       - DB_HOST=postgres
@@ -17,7 +20,9 @@ services:
       - DB_PORT=5432
       - JWT_SECRET=your_jwt_secret
       - JWT_EXPIRATION=7d
-      - STRIPE_API_KEY=your_stripe_api_key
+      - PI_API_KEY=your_pi_api_key # Pi API Key for authentication
+      - PI_APP_PRIVATE_KEY=your_pi_app_private_key # Private Key for Pi Wallet
+      - PI_APP_ID=your_pi_app_id # Your App's ID registered with Pi Network
     depends_on:
       - postgres
 
@@ -33,20 +38,6 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
-volumes:
-  postgres-data:
-
-version: '3.8'
-services:
-  backend:
-    build:
-      context: ./backend
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./backend:/app
-    environment:
-      - FLASK_ENV=development
   frontend:
     build:
       context: ./frontend
@@ -57,3 +48,6 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+
+volumes:
+  postgres-data:
