--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,41 @@ version: '3.8'
 services:
   backend:
     build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    environment:
+      FLASK_ENV: development
+      DATABASE_URL: postgres://user:password@postgres:5432/palace_of_goods
+      JWT_SECRET_KEY: your-secret-key
+      PI_API_KEY: your-pi-api-key
+    depends_on:
+      - postgres
+    volumes:
+      - .:/app
+
+  postgres:
+    image: postgres:13
+    restart: always
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: palace_of_goods
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
+
+
+version: '3.8'
+
+services:
+  backend:
+    build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
