--- a/backend/.env
+++ b/backend/.env
@@ -13,5 +13,7 @@ DB_PORT=5432
 JWT_SECRET=your_jwt_secret
 JWT_EXPIRATION=7d
 
-# Other configurations
-STRIPE_API_KEY=your_stripe_api_key
+# 
+DATABASE_URL=postgres://user:password@postgres:5432/palace_of_goods
+JWT_SECRET_KEY=your-production-secret
+PI_API_KEY=your-pi-api-key
