--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,10 @@
 Flask==2.2.5
+Flask-JWT-Extended==4.3.1
+Werkzeug==3.0.3
+gunicorn==22.0.0
+python-dotenv==0.19.0
+Flask-MongoEngine==0.9.5
+Flask==2.2.5
 Flask-SQLAlchemy==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.4.4
@@ -10,3 +16,4 @@ flask-limiter
 flask-socketio
 pytest
 pytest-flask
+flask-RESTful
