--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,6 @@ Werkzeug==3.0.3
 gunicorn==22.0.0
 python-dotenv==0.19.0
 Flask-MongoEngine==0.9.5
-Flask==2.2.5
 Flask-SQLAlchemy==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.4.4
@@ -12,8 +11,7 @@ Flask-Migrate==4.0.3
 Flask-Talisman==0.8.1
 pi-pysdk==1.0.0  # Replace with the real Pi SDK version
 pytest==7.4.0
-flask-limiter
-flask-socketio
-pytest
-pytest-flask
-flask-RESTful
+flask-limiter==2.1.2
+flask-socketio==5.2.0
+pytest-flask==1.2.0
+flask-RESTful==0.3.9
