--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
-
+FLASK_APP=app
+FLASK_ENV=development
+SECRET_KEY=your_secret_key
+DATABASE_URL=postgresql://postgres:Sup3rUs3r@localhost:5432/palace_of_goods
