--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ FLASK_APP=app
 FLASK_ENV=development
 SECRET_KEY=your_secret_key
 DATABASE_URL=postgresql://postgres:Sup3rUs3r@localhost:5432/palace_of_goods
+PI_API_KEY=your_pi_api_key
+PI_BASE_URL=https://api.minepi.com/v2
