--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,1 +1,18 @@
+# backend/Dockerfile
+FROM python:3.10-slim
 
+# Set working directory
+WORKDIR /app
+
+# Copy requirements and install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application code
+COPY . .
+
+# Expose the Flask port
+EXPOSE 5000
+
+# Start the Flask application
+CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
