--- a/.env
+++ b/.env
@@ -4,3 +4,16 @@ SECRET_KEY=your_secret_key
 DATABASE_URL=postgresql://postgres:Sup3rUs3r@localhost:5432/palace_of_goods
 PI_API_KEY=your_pi_api_key
 PI_BASE_URL=https://api.minepi.com/v2
+
+# .env
+POSTGRES_USER=test_user
+POSTGRES_PASSWORD=test_password
+POSTGRES_DB=test_db
+
+# Flask environment variables
+FLASK_ENV=development
+FLASK_APP=app
+
+# Pi Network SDK
+PI_API_KEY=your_pi_api_key_here
+PI_SANDBOX=true
