--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,3 @@
-# docker-compose.override.yml
 version: '3.8'
 
 services:
@@ -10,6 +9,8 @@ services:
       - "5000:5000"
     env_file:
       - .env
+    volumes:
+      - ./backend:/app
     depends_on:
       - db
 
@@ -19,13 +20,18 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
 
   db:
     image: postgres:15
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: test_user
+      POSTGRES_PASSWORD: test_password
+      POSTGRES_DB: test_db
     ports:
       - "5432:5432"
     volumes:
