--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,7 @@
-
+Flask==2.2.5
+Flask-JWT-Extended==4.3.1
+Flask-Migrate==4.0.3
+Flask-SQLAlchemy==3.0.5
+python-dotenv==0.21.1
+gunicorn==20.1.0
+psycopg2-binary==2.9.6
