--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,1 +1,26 @@
+# Use the official Node.js image as the base image
+FROM node:18
 
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy package.json and package-lock.json to the working directory
+COPY package.json package-lock.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the application code
+COPY . .
+
+# Build the React application
+RUN npm run build
+
+# Install a lightweight web server to serve the static files
+RUN npm install -g serve
+
+# Expose port 3000 to the outside world
+EXPOSE 3000
+
+# Start the web server
+CMD ["serve", "-s", "build"]
