--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,1 +1,51 @@
+# Use a slim Python image as the base
+FROM python:3.12-slim as base
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    LANG=C.UTF-8 \
+    TZ=UTC
+
+WORKDIR /app
+
+# Create a non-root user for security
+ARG UID=10001
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/nonexistent" \
+    --shell "/sbin/nologin" \
+    --no-create-home \
+    --uid "${UID}" \
+    appuser
+
+# Install system dependencies
+RUN apt-get update -y && apt-get install -y \
+    build-essential \
+    libpq-dev \
+    # Add any other system dependencies you need
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements file separately to leverage Docker caching
+COPY requirements.txt .
+
+# Install Python dependencies
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --no-cache-dir -r requirements.txt
+
+# Copy the application code
+COPY . .
+
+# Create necessary directories and set permissions
+RUN mkdir -p /app/data /app/uploads \
+    && chown -R appuser:appuser /app
+
+# Switch to non-privileged user
+USER appuser
+
+# Expose the port the app runs on
+EXPOSE 8000
+
+# Command to run the application
+CMD ["python", "main.py"]
