--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ Flask-SQLAlchemy==3.0.5
 python-dotenv==0.21.1
 gunicorn==22.0.0
 psycopg2-binary==2.9.6
+Django==1.11.5
+py2app==0.7.3
+pyparsing==2.0.1
