--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.2.5
 Flask-JWT-Extended==4.3.1
 Flask-Migrate==4.0.3
-Flask-pushjack
+Flask-pushjack==1.0.0
 Flask-SQLAlchemy==3.0.5
 python-dotenv==0.21.1
 gunicorn==22.0.0
