--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,3 +41,46 @@
     ]
   }
 }
+
+The `package.json` file for the `palace-of-goods-frontend` contains the following key information:
+
+### General Information:
+- **Name**: palace-of-goods-frontend
+- **Version**: 1.0.0
+- **Private**: true
+
+### Scripts:
+- **start**: `react-scripts start`
+- **build**: `react-scripts build`
+- **test**: `react-scripts test`
+- **eject**: `react-scripts eject`
+- **lint**: `eslint ./src`
+- **format**: `prettier --write ./src`
+
+### Dependencies:
+- **@emotion/react**: ^11.11.0
+- **@emotion/styled**: ^11.11.0
+- **@mui/material**: ^5.15.0
+- **axios**: ^1.5.0
+- **react**: ^18.2.0
+- **react-dom**: ^18.2.0
+- **react-router-dom**: ^6.15.0
+- **react-scripts**: 5.0.1
+- **web-vitals**: ^2.1.4
+
+### DevDependencies:
+- **eslint**: ^8.48.0
+- **eslint-config-prettier**: ^9.0.0
+- **eslint-plugin-react**: ^7.33.0
+- **eslint-plugin-react-hooks**: ^4.6.0
+- **prettier**: ^3.1.2
+
+### Browserslist:
+- **Production**:
+  - >0.2%
+  - not dead
+  - not op_mini all
+- **Development**:
+  - last 1 chrome version
+  - last 1 firefox version
+  - last 1 safari version
