--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -58,35 +58,23 @@ jobs:
             title: "CodeQL Analysis Failed",
             body: `The CodeQL analysis failed for the following commit: ${context.sha}. Please investigate the issue.`
           })
-                      - name: Run python black code formatter
-  # You may pin to the exact commit or the version.
-  # uses: DataDog/action-py-black-formatter@bebd29d1572a82c8e4a9de3c42c1592529a7d6af
-  uses: DataDog/action-py-black-formatter@v2.5
+                      - name: Cache
+  uses: actions/cache@v4.2.0
   with:
-    # Black additional input arguments.
-    additional_args: # optional, default is 
-    # Exit code when black formatting errors are found [true, false]. Defaults to 'true'.
-
-    fail_on_error: # optional, default is true
-    # Main branch of the repository to speed up incremental diff
-
-    main_branch: # optional, default is main
-    # (--quiet) Don't emit non-error messages to stderr. Errors are still emitted; silence 
-  those with 2>/dev/null
-
-    quiet_mode: # optional, default is false
-    # (--diff) Don't write the files back, just output a diff for each file on stdout.
-
-    print_diff_mode: # optional, default is false
-    # (--check) Don't write the files back, just return the status. Return code 0 means nothing 
-  would change. Return code 1 means some files would be reformatted. Return code 123 means
-  there was an internal error.
-
-    check_mode: # optional, default is false
-    # Turn on if you only want to check changed files instead of all files.
-
-    only_changed_files: # optional, default is false
-    # Sha of the commit to compare files to.
-
-    base_commit: # optional, default is 
+    # A list of files, directories, and wildcard patterns to cache and restore
+    path: 
+    # An explicit key for restoring and saving the cache
+    key: 
+    # An ordered multiline string listing the prefix-matched keys, that are used for restoring stale cache if no cache hit occurred for key. Note `cache-hit` returns false in this case.
+    restore-keys: # optional
+    # The chunk size used to split up large files during upload, in bytes
+    upload-chunk-size: # optional
+    # An optional boolean when enabled, allows windows runners to save or restore caches that can be restored or saved respectively on other platforms
+    enableCrossOsArchive: # optional, default is false
+    # Fail the workflow if cache entry is not found
+    fail-on-cache-miss: # optional, default is false
+    # Check if a cache entry exists for the given input(s) (key, restore-keys) without downloading the cache
+    lookup-only: # optional, default is false
+    # Run the post step to save the cache even if another step before fails
+    save-always: # optional, default is false
           
