--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -19,76 +19,41 @@ jobs:
       matrix:
         operating-system:
           [
-            ubuntu-20.04,
-            windows-latest,
             ubuntu-22.04,
-            ubuntu-latest,
-            macos-latest,
-            macos-13
+            windows-latest,
+            macos-latest
           ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Run with setup-python 3.9.13
-        uses: ./
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9.13
-      - name: Verify 3.9.13
-        run: python __tests__/verify-python.py 3.9.13
-
-      - name: Run with setup-python 3.9.13
-        uses: ./
-        with:
-          python-version: 3.10.11
-      - name: Verify 3.10.11
-        run: python __tests__/verify-python.py 3.10.11
-
-      - name: Run with setup-python 3.11.9
-        uses: ./
-        with:
-          python-version: 3.11.9
-      - name: Verify 3.11.9
-        run: python __tests__/verify-python.py 3.11.9
-
-      - name: Run with setup-python 3.12.7
-        uses: ./
-        with:
-          python-version: 3.12.7
-      - name: Verify 3.12.7
-        run: python __tests__/verify-python.py 3.12.7
-
-      - name: Run with setup-python 3.13.0
-        uses: ./
-        with:
-          python-version: 3.13.0
-      - name: Verify 3.13.0
-        run: python __tests__/verify-python.py 3.13.0
-
-      - name: Run with setup-python 3.13
-        id: cp313
-        uses: ./
-        with:
-          python-version: '3.13'
-      - name: Verify 3.13
-        run: python __tests__/verify-python.py 3.13
-      - name: Run python-path sample 3.13
-        run: pipx run --python '${{ steps.cp313.outputs.python-path }}' nox --version
-
-      - name: Run with setup-python ==3.13
-        uses: ./
-        with:
-          python-version: '==3.13'
-      - name: Verify ==3.13
-        run: python __tests__/verify-python.py 3.13
-
-      - name: Run with setup-python <3.13
-        uses: ./
-        with:
-          python-version: '<3.13'
-      - name: Verify <3.13
-        run: python __tests__/verify-python.py 3.12
-      - name: Test Raw Endpoint Access
+          python-version: 3.9
+      - name: Install dependencies
         run: |
-          curl -L https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json | jq empty
-        shell: bash
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run tests
+        run: pytest tests/e2e/
+      - name: Verify Python version
+        run: python -c "import sys; assert sys.version_info[:2] == (3, 9)"
+
+  test-setup-node:
+    name: Test setup-node
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 16
+      - name: Install dependencies
+        run: npm install
+      - name: Run Cypress tests
+        run: npx cypress run
+      - name: Verify Node version
+        run: node -v
