--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,25 +1,25 @@
 {
   "short_name": "PalaceGoods",
-  "name": "Palace of Goods",
+  "name": "Palace of Goods - Marketplace",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "favicon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "favicon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": "/",
+  "background_color": "#ffffff",
+  "theme_color": "#4caf50",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "description": "An e-commerce marketplace powered by Web3 and the Pi Network.",
+  "scope": "/",
+  "lang": "en-US",
+  "categories": ["shopping", "marketplace", "ecommerce"]
 }
