--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,8 +26,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           tags: "<IMAGE>"
-          # For pull requests, export results to the build cache.
-          # Otherwise, push to a registry.
-          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
-- name: Docker Setup Buildx
-  uses: docker/setup-buildx-action@v3.8.0
+          outputs: type=${{ github.event_name == 'pull_request' && 'cacheonly' || 'registry' }}
