--- a/tests/e2e/e2e-tests.yml
+++ b/tests/e2e/e2e-tests.yml
@@ -27,10 +27,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.9
+      - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.13
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -66,3 +66,17 @@ jobs:
         run: npm test
       - name: Verify Node version
         run: node -v
+- name: Install system dependencies
+  run: sudo apt-get install -y libpq-dev build-essential
+  - name: Cache dependencies
+  uses: actions/cache@v3
+  with:
+    path: ~/.cache/pip
+    key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+    restore-keys: |
+      ${{ runner.os }}-pip-
+      env:
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  - name: Retry dependency installation
+  run: pip install -r requirements.txt || pip install -r requirements.txt
