--- a/.github/workflows/dependency-management.yml
+++ b/.github/workflows/dependency-management.yml
@@ -9,23 +9,39 @@ on:
 jobs:
   dependencies:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
+      - name: Install System Dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential libpq-dev
+
+      - name: Cache Python Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.in') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install pip-tools
         run: pip install pip-tools
 
       - name: Compile Requirements
-        run: pip-compile requirements.in
+        run: |
+          pip-compile requirements.in --output-file=requirements.txt
 
       - name: Install Dependencies
         run: pip install -r requirements.txt
 
+      - name: Verify Installed Packages
+        run: pip check
+
       - name: Run Tests
-        run: pytest  # Or your testing framework
+        run: pytest  # Replace with your specific testing framework or command
