--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=http://localhost:5000         # Backend URL for local development
+REACT_APP_PI_SANDBOX=true                       # Use sandbox for Pi Network
+REACT_APP_PI_PUBLIC_KEY=your_pi_network_key     # Public key for Pi Network SDK
