--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-DATABASE_URL=sqlite:///palace_of_goods.db
-SECRET_KEY=your_secret_key
-PI_API_KEY=pi_network_api_key
+# Backend Configuration
+DATABASE_URL=sqlite:///palace_of_goods.db  # Replace with your production DB URL (e.g., PostgreSQL)
+SECRET_KEY=your_secret_key                # Replace with a strong secret key
+PI_API_KEY=your_pi_network_server_api_key # Replace with your Pi Network API Key
