--- a/frontend/.env
+++ b/frontend/.env
@@ -1,9 +1,4 @@
+# Frontend Configuration
 REACT_APP_API_URL=http://localhost:5000         # Backend URL for local development
 REACT_APP_PI_SANDBOX=true                       # Use sandbox for Pi Network
-REACT_APP_PI_PUBLIC_KEY=your_pi_network_key     # Public key for Pi Network SDK
-const API_URL = process.env.REACT_APP_API_URL;
-const PI_SANDBOX = process.env.REACT_APP_PI_SANDBOX === "true";
-const PI_PUBLIC_KEY = process.env.REACT_APP_PI_PUBLIC_KEY;
-
-console.log("Backend API URL:", API_URL);
-console.log("Using Pi Sandbox:", PI_SANDBOX);
+REACT_APP_PI_PUBLIC_KEY=your_pi_network_key     # Replace with your Pi Network public key
