--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,1 +1,20 @@
+# Use the official Python slim image
+FROM python:3.9-slim
 
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy the requirements file
+COPY requirements.txt .
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the application code
+COPY . .
+
+# Expose port 5000 for the Flask app
+EXPOSE 5000
+
+# Command to run the Flask app
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
