--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,26 +1,26 @@
-# Use the official Node.js image
-FROM node:16
+# Use the official Node.js image for building the React app
+FROM node:16 AS build
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and install dependencies
-COPY package.json .
+# Copy package.json and package-lock.json to the working directory
+COPY package.json package-lock.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the entire application code
+# Copy the entire application source code
 COPY . .
 
 # Build the React app for production
 RUN npm run build
 
-# Use Nginx to serve the built files
+# Use Nginx to serve the production build
 FROM nginx:alpine
 
 # Copy the build folder to the Nginx directory
-COPY --from=0 /app/build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 
 # Expose port 80 for Nginx
 EXPOSE 80
