--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,32 @@ Flask-SQLAlchemy==3.0.0
 python-dotenv==0.21.0
 PyJWT==2.6.0
 pytest==7.4.0
+# Core Flask framework
+Flask==2.2.5
+
+# Cross-Origin Resource Sharing (CORS)
+Flask-Cors==4.0.2
+
+# SQLAlchemy ORM integration with Flask
+Flask-SQLAlchemy==3.0.0
+
+# Environment variable management
+python-dotenv==0.21.0
+
+# JSON Web Token handling
+PyJWT==2.6.0
+
+# Schema validation and serialization
+marshmallow==3.20.1
+
+# Additional support for Flask-JWT-Extended
+Flask-JWT-Extended==4.4.0
+
+# Unit testing framework
+pytest==7.4.0
+
+# Database migrations
+Flask-Migrate==4.0.3
+
+# For PostgreSQL (optional, based on your database choice)
+psycopg2-binary==2.9.7
