--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-version: '3.8'
+version: '3.9'
 
 services:
+  # Frontend Service
   frontend:
     build:
       context: ./frontend
@@ -16,20 +17,25 @@ services:
     environment:
       REACT_APP_API_URL: http://localhost:5000
 
+  # Backend Service
   backend:
     build:
       context: ./backend
     ports:
       - "5000:5000"
-    env_file:
-      - ./backend/.env
+    environment:
+      - FLASK_ENV=development
+      - DATABASE_URL=postgresql://user:password@db:5432/palace_of_goods
+      - SECRET_KEY=your-secret-key
+      - JWT_SECRET_KEY=your-jwt-secret-key
     volumes:
       - ./backend:/app
     depends_on:
       - db
 
+  # PostgreSQL Database
   db:
-    image: postgres:17
+    image: postgres:15
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
@@ -40,6 +46,7 @@ services:
       - pgdata:/var/lib/postgresql/data
     restart: always
 
+  # Nginx Reverse Proxy
   nginx:
     build:
       context: ./nginx
@@ -53,28 +60,3 @@ services:
 
 volumes:
   pgdata:
-version: '3.9'
-
-services:
-  flask-app:
-    build: .
-    ports:
-      - "5000:5000"
-    environment:
-      - FLASK_ENV=development
-      - DATABASE_URL=sqlite:///app.db
-      - SECRET_KEY=your-secret-key
-      - JWT_SECRET_KEY=your-jwt-secret-key
-    volumes:
-      - .:/app
-    depends_on:
-      - db
-
-  db:
-    image: postgres:15
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: flask_db
-    ports:
-      - "5432:5432"
