--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,3 +33,9 @@ Flask-Migrate==4.0.3
 
 # For PostgreSQL (optional, based on your database choice)
 psycopg2-binary==2.9.7
+Flask==2.3.2
+Flask-SQLAlchemy==3.0.0
+Flask-JWT-Extended==4.4.4
+Flask-Cors==4.0.0
+gunicorn
+psycopg2
