--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,5 @@
-Flask==2.2.5
-Flask-Cors==4.0.2
-Flask-SQLAlchemy==3.0.0
-python-dotenv==0.21.0
-PyJWT==2.6.0
-pytest==7.4.0
 # Core Flask framework
-Flask==2.2.5
+Flask==2.3.2
 
 # Cross-Origin Resource Sharing (CORS)
 Flask-Cors==4.0.2
@@ -13,29 +7,24 @@ Flask-Cors==4.0.2
 # SQLAlchemy ORM integration with Flask
 Flask-SQLAlchemy==3.0.0
 
+# Database migrations
+Flask-Migrate==4.0.3
+
 # Environment variable management
 python-dotenv==0.21.0
 
 # JSON Web Token handling
+Flask-JWT-Extended==4.4.4
 PyJWT==2.6.0
 
 # Schema validation and serialization
 marshmallow==3.20.1
 
-# Additional support for Flask-JWT-Extended
-Flask-JWT-Extended==4.4.0
-
 # Unit testing framework
 pytest==7.4.0
 
-# Database migrations
-Flask-Migrate==4.0.3
-
-# For PostgreSQL (optional, based on your database choice)
-psycopg2-binary==2.9.7
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.0
-Flask-JWT-Extended==4.4.4
-Flask-Cors==4.0.0
+# Production-ready WSGI server
 gunicorn
-psycopg2
+
+# PostgreSQL driver
+psycopg2-binary==2.9.7
