--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,23 @@
-worker_processes 1;
+# nginx/nginx.conf
+server {
+    listen 80;
 
-events { worker_connections 1024; }
+    # Proxy React frontend
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-http {
-    include /etc/nginx/mime.types;
-    sendfile on;
-
-    server {
-        listen 80;
-
-        # Proxy API requests to the Flask backend
-        location /api/ {
-            proxy_pass http://backend:5000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # Serve static files from the React frontend
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri /index.html;
-        }
+    # Proxy Flask backend
+    location /api/ {
+        rewrite ^/api(/.*)$ $1 break;
+        proxy_pass http://backend:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
