--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,11 +1,3 @@
-# Use the official Nginx image
-FROM nginx:alpine
-
-# Copy the custom Nginx configuration file
-COPY nginx.conf /etc/nginx/nginx.conf
-
-# Expose port 80 for Nginx
-EXPOSE 80
-
-# Start Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# nginx/Dockerfile
+FROM nginx:latest
+COPY nginx.conf /etc/nginx/conf.d/default.conf
